k8s/postgres-deployment.yaml
# Postgres Deployment (creates the pod)
# The PVC is then bound to a PV. The PV is then mounted to the pod.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec: # This is the blueprint for the Pod
      containers:
        - name: postgres
          image: postgres:12.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
# Postgres Service
# This exposes the postgres pod to the cluster. The port remains the same at all times!
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
